--- a/generators/app/templates/index.js.ejs
+++ b/generators/app/templates/index.js.ejs
@@ -16,7 +16,7 @@ const <%= apiKeys[i]  %> = new <%= config.id() %>Api.<%= apis[apiKeys[i]] %>();
 exports.dialogflow = (request, response) => {
 
   function apiCallback(reply, done) {
-    // The callback signature with error, data, and response is defined in OpenAPI Generator.
+    // The callback signature with error, data, and response is defined by OpenAPI Generator.
     return function(error, data, _response) {
       console.log('Sending reply: ' + reply);
       const replyPayload = convo.dialogFlow.payload.createReplyPayload(reply);
@@ -25,22 +25,37 @@ exports.dialogflow = (request, response) => {
   }
 
   function httpCallback(done) {
-    const message = convo.dialogFlow.payload.getMessageFromPayload(request.body);
+    const conversationName = convo.dialogFlow.payload.getConversationNameFromPayload(request.body);
+    const conversationLanguage = convo.dialogFlow.payload.getConversationLanguageFromPayload(request.body);
+    console.log('Receiving conversation: %s, using language: %s', conversationName, conversationLanguage);
     <%
       const conversations = config.conversations();
-      for (var i = 0, len = conversations.length; i < len; i++) {
+      console.log(conversations);
+      for (var i = 0, iLen = conversations.length; i < iLen; i++) {
     %>
-    <% if (i > 0) { %>else<% } %> if (["<%= conversations[i].messages.join('", "') %>"].includes(message)) {
-      console.log('Receiving message: ' + message);
-      var args = [];
-      args.push(apiCallback('<%= conversations[i].reply %>', done));
-      <%= conversations[i].api %>.<%= conversations[i].method %>(...args);
+    <% if (i > 0) { %>else<% } %> if (conversationName === '<%= conversations[i].name %>') {
+      <%
+        const languages = Object.keys(conversations[i].reply);
+        for (var j = 0, jLen = languages.length; j < jLen; j++) {
+      %>
+      <% if (j > 0) { %>else<% } %> if (conversationLanguage === '<%= languages[j] %>') {
+        var args = [];
+        args.push(apiCallback('<%= conversations[i].reply[languages[j]] %>', done));
+        <%= conversations[i].api %>.<%= conversations[i].method %>(...args);
+      }
+      <%
+        }
+      %>
+      else {
+        const replyPayload = convo.dialogFlow.payload.createReplyPayload('Unsupported reply language: ' + conversationLanguage);
+        done(null, replyPayload);
+      }
     }
     <%
       }
     %>
     else {
-      const replyPayload = convo.dialogFlow.payload.createReplyPayload('Unsupported message: ' + message);
+      const replyPayload = convo.dialogFlow.payload.createReplyPayload('Unsupported conversation: ' + conversationName);
       done(null, replyPayload);
     }
   }
