Add environment config support. Extract common generator config setting to Yeoman's extension.

--- a/generators/app/templates/agents/dialogflow/agent.json.ejs
+++ b/generators/app/templates/agents/dialogflow/agent.json.ejs
@@ -21,7 +21,7 @@
   },
   "defaultTimezone": "<%= config.convoSpec.info.timezone %>",
   "webhook": {
-    "url": "<%= config.convoSpec.agents.dialogflow.target_url %>",
+    "url": "<%= config.env.cloudfunctions.url %>",
     "headers": {
       "User-Agent": "convo-dialogflow-agent"
     },
