--- a/generators/app/templates/middlewares/openapi-cloudfunctions/index.js.ejs
+++ b/generators/app/templates/middlewares/openapi-cloudfunctions/index.js.ejs
@@ -123,12 +123,13 @@ exports.dialogflow = (request, response) => {
       case '<%= __conversations[i].name %>':
         switch (conversationLanguage) {
         <%
-          const __languages = Object.keys(__conversations[i].reply);
+          const __languages = Object.keys(__conversations[i].replies);
           for (var j = 0, jLen = __languages.length; j < jLen; j++) {
+            const randomReply = __conversations[i].replies[__languages[j]][Math.floor(Math.random() * jLen)];
         %>
           case '<%= __languages[j] %>':
             console.info('Calling API: %s, with method: %s', '<%= __conversations[i].api %>', '<%= __conversations[i].method %>');
-            callApi(<%= __conversations[i].api %>, '<%= __conversations[i].method %>', conversationParams, '<%= __conversations[i].reply[__languages[j]] %>', convoOpts, done);
+            callApi(<%= __conversations[i].api %>, '<%= __conversations[i].method %>', conversationParams, '<%= randomReply %>', convoOpts, done);
             break;
         <%
           }
