Parameterise DialogFlow project ID.

--- a/generators/app/templates/agents/dialogflow/agent.json.ejs
+++ b/generators/app/templates/agents/dialogflow/agent.json.ejs
@@ -5,7 +5,7 @@
   "disableStackdriverLogs": true,
   "googleAssistant": {
     "googleAssistantCompatible": false,
-    "project": "convo-jenkins",
+    "project": "<%= config.convoSpec.agents.dialogflow.project_id %>",
     "welcomeIntentSignInRequired": false,
     "startIntents": [],
     "systemIntents": [],
