--- a/generators/app/templates/agents/dialogflow/entity.json.ejs
+++ b/generators/app/templates/agents/dialogflow/entity.json.ejs
@@ -2,5 +2,5 @@
   "name": "<%= param.name %>",
   "isOverridable": true,
   "isEnum": true,
-  "automatedExpansion": false
+  "automatedExpansion": true
 }
